tables and relations made

--- a/app/views/job_seekers/_form.html.erb
+++ b/app/views/job_seekers/_form.html.erb
@@ -76,6 +76,12 @@
     <%= f.text_area :interests %>
   </div>
 
+  <div class="field">
+    <%= f.label :skills %>
+    <%= f.text_field :skills %>
+
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
