--- a/app/views/job_seekers/show.html.erb
+++ b/app/views/job_seekers/show.html.erb
@@ -65,5 +65,10 @@
   <%= @job_seeker.interests %>
 </p>
 
+<p>
+  <strong>Skills:</strong>
+  <%= @job_seeker.skills %>
+</p>
+
 <%= link_to 'Edit', edit_job_seeker_path(@job_seeker) %> |
 <%= link_to 'Back', job_seekers_path %>
