--- a/app/views/job_seekers/index.html.erb
+++ b/app/views/job_seekers/index.html.erb
@@ -18,6 +18,7 @@
       <th>Rating</th>
       <th>Comments</th>
       <th>Interests</th>
+      <th>Skills</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -38,6 +39,7 @@
         <td><%= job_seeker.rating %></td>
         <td><%= job_seeker.comments %></td>
         <td><%= job_seeker.interests %></td>
+        <td><%= job_seeker.skills %></td>
         <td><%= link_to 'Show', job_seeker %></td>
         <td><%= link_to 'Edit', edit_job_seeker_path(job_seeker) %></td>
         <td><%= link_to 'Destroy', job_seeker, method: :delete, data: { confirm: 'Are you sure?' } %></td>
