--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,8 @@
     <%= javascript_include_tag 'application' %>
   </head>
   <div class="container-fluid">
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
     <div class="row">
     <nav class="navbar navbar-default navbar-fixed-top">
         <ul class="nav navbar-nav">
