added link to login

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
     <div class="row">
     <nav class="navbar navbar-default navbar-fixed-top">
         <ul class="nav navbar-nav">
-          <li><a href="">Log-in/out</a></li>
+          <li><a href="users/sign_in">Log-in/out</a></li>
           <li><a href="">Jobs</a></li>
           <li><a href="">Employers</a></li>
           <li><a href="">Job Seekers</a></li>
