added comments controller + model, change bug found in /jobseeker

--- a/app/views/job_seekers/_form.html.erb
+++ b/app/views/job_seekers/_form.html.erb
@@ -77,8 +77,8 @@
   </div>
 
   <div class="field">
-    <%= f.label :skills %>
-    <%= f.text_field :skills %>
+    <%= f.label :skill_id %>
+    <%= f.text_field :skill_id %>
 
   </div>
 
