--- a/app/views/job_seekers/show.html.erb
+++ b/app/views/job_seekers/show.html.erb
@@ -72,3 +72,31 @@
 
 <%= link_to 'Edit', edit_job_seeker_path(@job_seeker) %> |
 <%= link_to 'Back', job_seekers_path %>
+
+<% @job_seeker.comments.each do |comment| %>
+  <p>
+    <strong>Commenter</strong>
+    <%= comment.commenter %>
+  </p>
+  <p>
+    <strong>Comment</strong>
+    <%= comment.body %>
+  </p>
+<% end %>
+
+<h2>Add a Comment:</h2>
+
+<%= form_for([@job_seeker, @job_seeker.comments.build]) do |f| %>
+  <p>
+    <%= f.label :commenter %><br />
+    <%= f.text_field :commenter %>
+  </p>
+  <p>
+    <%= f.label :body %> <br />
+    <%= f.text_area :body %>
+  </p>
+  <p>
+    <%= f.submit %>
+  </p>
+<% end %>
+
